c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_struct_declaration/incomplete_member.c
struct s; // declare incomplete structure type

struct a {
  // can't declare a struct member with incomplete type
  struct s g;
};